--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -67,6 +67,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fafafa;
+    color: #D90D6C;
   }
   
   .form-actions {
