--- a/src/components/Marketplace.css
+++ b/src/components/Marketplace.css
@@ -7,6 +7,7 @@
     background-color:  #352473;
     margin: 10px;
     font-family: "Logo", sans-serif;
+    color: #fafafa;
     cursor: pointer;
   }
   
