--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -67,6 +67,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #fafafa;
+  color: black;
 }
 
 #e-mail:hover, #supassword:hover, #confirm-password:hover, #first-name:hover, #last-name:hover, #user-name:hover {
