--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,4 +1,8 @@
-/* Post.css */
+
+@font-face {
+  font-family: "Logo";
+  src: url("/src/fonts/eras.TTF") format("truetype");
+}
 
 .post {
     margin-bottom: 20px;
@@ -10,7 +14,7 @@
   }
   
   .post_content {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.6;
     color: #1c1e21;
   }
@@ -19,6 +23,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    justify-content: space-between;
   }
   
   .post_avatar {
@@ -29,9 +34,10 @@
   }
   
   .post_username {
-    font-size: 16px;
+    font-size: 30px;
     font-weight: bold;
-    color: #1877f2;
+    color: var(--color-1);
+    font-family: 'Logo';
   }
   
   .post_timestamp {
@@ -45,7 +51,9 @@
   }
   
   .post_image {
-    width: 100%;
+    display: block; /* Make the image a block-level element */
+    margin: 0 auto; /* Center the image horizontally */
+    width: 30%; /* Adjust the width of the image */
     border-radius: 8px;
     margin-bottom: 10px;
   }
@@ -53,18 +61,31 @@
   .post_actions {
     display: flex;
     align-items: center;
+    width: 20px;
+    height: auto;
   }
   
   .post_action {
     margin-right: 10px;
-    color: #4c73ad;
+    color: white;
     cursor: pointer;
     display: flex;
     align-items: center;
-    background-color:tomato
+    background-color: var(--color-1);
+    font-family: 'Logo';
+
   }
   
   .post_action_icon {
     margin-right: 5px;
   }
   
+  .likeImg {
+    width: 30px; /* Adjust width as needed */
+    height: auto; /* Adjust height as needed */
+  }
+  
+  .loveImg {
+    width: 30px; /* Adjust width as needed */
+    height: auto; /* Adjust height as needed */
+  }
