--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+:root{
+  --color-1:#352473;
+  --color-2:#724fc3; 
+  --color-3:#d90d6c;
+}
+
 @font-face {
   font-family: "Slogan";
   src: url("/src/fonts/lucida.TTF") format("truetype");
@@ -34,13 +40,42 @@
   object-fit: contain;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
+}
+
+.app_header_left {
+  margin-right: auto;
+}
+
+.app_header_center {
+  margin: 0 auto;
+}
+
+.app_header_right {
+  margin-left: auto;
 }
 
 .app_header_image {
   object-fit: contain;
-  width: 220px;
-  cursor: pointer;
+  width: 200px;
+  background-color: #ffff;
+  margin-left: auto;
+}
+
+.balam_header {
+  object-fit: contain;
+  width: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header_button, .balam_button {
+  background-color: #ffff;
+  padding: 5;
+}
+
+.header_button:hover, .balam_button:hover {
+  border:var(--color-3) 2px solid;
 }
 
 .register {
@@ -54,31 +89,6 @@
   border: #D90D6C solid;
   background-color: #724FC3;
 }
-
-/* App.css */
-
-/* Add these styles for the "Coming Soon" section */
-.coming_soon {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.coming_soon img {
-  max-width: 200px;
-  margin-bottom: 10px;
-  margin-top: 100px;
-}
-
-.coming_soon h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.coming_soon p {
-  font-size: 16px;
-  color: #724FC3;
-}
-
 
 .footer {
   background-color: #352473;
