--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -4,6 +4,13 @@
   src: url("/src/fonts/eras.TTF") format("truetype");
 }
 
+.marketplace {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
 .post {
     margin-bottom: 20px;
     padding: 20px;
