--- a/src/components/Marketplace.css
+++ b/src/components/Marketplace.css
@@ -8,6 +8,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .product {
@@ -21,6 +23,10 @@
   border-radius: 8px;
   background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+}
+
+.product:hover {
+  transform: scale(1.1);
 }
 
 .product_name {
