--- a/src/components/Marketplace.css
+++ b/src/components/Marketplace.css
@@ -8,8 +8,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 1%;
 }
 
 .product {
