--- a/src/components/Marketplace.css
+++ b/src/components/Marketplace.css
@@ -5,17 +5,14 @@
 
 .marketplace {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 20px;
   margin: 1%;
+  justify-content: center;
 }
 
 .product {
-  height: 350px;
   width: 350px;
-  display: flex;
-  flex-direction: column;
   margin: 10px;
   padding: 10px;
   border: 1px solid #dddfe2;
@@ -28,50 +25,52 @@
   transform: scale(1.1);
 }
 
+.product_header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100%;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+
 .product_name {
-  font-size: 25px;
+  font-size: 28px;
   line-height: 1.6;
   color: var(--color-1);
   font-weight: bold;
   font-family: 'Logo';
   text-transform: capitalize;
+  margin-bottom: 0%;
 }
 
 .product_price {
-  font-size: 20px;
+  font-size: 25px;
   line-height: 1.6;
   color: #1c1e21;
   font-family: 'Logo';
 }
 
-.product_description {
-  font-size: 20px;
+.product_rating {
+  font-size: 18px;
   line-height: 1.6;
-  color: #1c1e21;
+  color: var(--color-2);
+  text-align: center;
 }
 
 .product_images {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  height: -webkit-fill-available;
+  height: 200px;
+  overflow: hidden; /* Evitar que las imágenes sobrepasen el contenedor */
 }
 
 .product_image {
-  display: block; /* Make the image a block-level element */
-  margin: auto; /* Center the image horizontally */
-  max-width: 320px; /* Set maximum width for the image */
-  max-height: 200px;
-  height: auto; /* Maintain aspect ratio */
-  margin-bottom: 10px;
-  margin-top: 10px;
+  max-width: 95%;
+  object-fit: contain; /* Ajusta la imagen manteniendo su relación de aspecto */
   border-radius: 5%;
-}
-
-.product_header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-  justify-content: space-between;
+  max-block-size: -webkit-fill-available;
+  
 }
