--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,17 @@
   background-color: #724FC3;
 }
 
+.create_post_button {
+  margin-bottom: 20px;
+  background-color: var(--color-1);
+  margin-left: 20px;
+}
+
+.create_post_button:hover {
+  border: #D90D6C solid;
+  background-color: #724FC3;
+}
+
 .footer {
   background-color: #352473;
   color: #fafafa;
