--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -24,6 +24,11 @@ body {
   padding: 20px;
 }
 
+.profile_button:hover {
+    border: #D90D6C solid;
+    background-color: #724FC3;
+}
+
 .profile-body {
   display: flex;
   flex-direction: row;
@@ -114,7 +119,7 @@ body {
 
 /* Timeline component */
 .timeline {
-  width: 100%;
+  width: 80%;
   padding: 20px;
   background-color: white;
   border-radius: 5px;
