--- a/src/components/ProductDetail.css
+++ b/src/components/ProductDetail.css
@@ -35,12 +35,6 @@
     font-family: 'Logo';
   }
   
-  .product-d-description {
-    font-size: 20px;
-    line-height: 1.6;
-    color: #1c1e21;
-  }
-  
   .product-d-image {
     display: block; /* Make the image a block-level element */
     margin: auto; /* Center the image horizontally */
@@ -69,4 +63,73 @@
   .close-button:hover {
     background-color: var(--color-2);
     border: var(--color-3) solid;
+  }
+
+  .description-container {
+    height: 50%;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #dddfe2;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  }
+
+  .description-title {
+    font-size: 30px;
+    line-height: 1.6;
+    color: var(--color-2);
+    font-weight: bold;
+    font-family: 'Slogan';
+  }
+
+  .description-text {
+    font-size: 20px;
+    line-height: 1.6;
+    color: black;
+    font-family: Arial, sans-serif;
+  }
+
+  .seller-container {
+    height: 50%;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #dddfe2;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  }
+
+  .seller-title {
+    font-size: 30px;
+    line-height: 1.6;
+    color: var(--color-2);
+    font-weight: bold;
+    font-family: 'Slogan';
+    margin-bottom: 0%;
+  }
+
+  .seller-name {
+    font-size: 30px;
+    line-height: 1.6;
+    color: var(--color-1);
+    font-family: 'Logo';
+  }
+
+  .seller-button {
+    font-size: 50px;
+    color: var(--color-2);
+    background: transparent;
+    margin-left: 2%;
+  }
+
+  .seller-button:hover {
+    transform: scale(1.3);
+    border: transparent;
   }
