--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: "Slogan";
-  src: url("/src/fonts/lucida.TTF") format("truetype");
+  src: url("/src/fonts/mystical.TTF") format("truetype");
 }
 
 @font-face {
