--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -106,9 +106,16 @@
 /* Post comments */
 .post_comments {
   margin-top: 10px;
-  color: var(--color-3);
+  color: var(--color-2);
   font-size: 20px;
-  font-style: italic;
+  margin-bottom: 20px;
+  font-family: 'Logo';
+}
+
+.comment-text {
+font-family: Arial, Helvetica, sans-serif;
+margin-left: 10px;
+color: black;
 }
 
 .post_comments p {
@@ -119,24 +126,9 @@
   font-weight: bold;
 }
 
-/* Comment input and button */
-.post_commentbox {
-  margin-top: 10px;
-}
-
-.post_input {
-  width: 70%;
-  padding: 8px;
-  margin-right: 5px;
-}
-
-.post_button {
-  padding: 8px 15px;
-  background-color: var(--color-2);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.post_button{
+  height: 40px;
+  margin-left: 20px;
 }
 
 .post_button:hover {
@@ -144,6 +136,25 @@
 }
 
 .post_button:disabled {
-  background-color: #ccc;
+  background-color:var(--color-1);
   cursor: not-allowed;
+}
+
+
+.post-actions-container {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.form-container {
+  display: flex;
+  flex-direction: row;
+  width: 20px;
+  height: 20px;
+}
+
+.post_commentbox{
+  display: flex;
+  flex-direction: row;
 }
