--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -38,7 +38,7 @@
     font-weight: bold;
     font-family: 'Slogan';
     text-transform: capitalize;
-    margin-bottom: 0%;
+    margin-left: 1%;
   }
   
   .review-username {
