--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -58,7 +58,7 @@
     width: 100%;
   }
 
-  input[type="text"] {
+  #input-size {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
