--- a/src/components/DeleteProduct.css
+++ b/src/components/DeleteProduct.css
@@ -1,52 +1,30 @@
-/* Estilos para el fondo oscuro del modal */
-.modal-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro semi-transparente */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Ajusta el z-index según sea necesario */
+.delete-button {
+    background-color: var(--color-1);
+    margin: 10px;
+    font-family: "Logo", sans-serif;
+    color: #fafafa;
+    float: right;
+    border-radius: 100%;
+    width: 70px;
+    height: 65px;
 }
 
-/* Estilos para el modal */
-.modal {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    position: fixed;
-    top: 15%; /* Ajusta el 10% según tus necesidades */
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1001; /* Ajusta el z-index según sea necesario */
-}
-
-/* Estilos para el título del modal */
-.modal h3 {
-    margin-bottom: 10px;
-}
-
-/* Estilos para los botones del modal */
-.modal button {
-    margin-right: 10px;
-    padding: 8px 16px;
+.delete-button:hover {
+    background-color: var(--color-2);
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    transform: scale(1.3);
 }
 
-/* Estilos para el botón "Yes" */
-.modal button.yes {
-    background-color: #d9534f; /* Color rojo */
+#trash-icon {
     color: white;
+    font-size: 30px;
 }
 
-/* Estilos para el botón "No" */
-.modal button.no {
-    background-color: #337ab7; /* Color azul */
+#trash-icon:hover {
     color: white;
+    font-size: 30px;
+}
+
+#delete-tooltip .MuiTooltip-tooltip {
+    font-size: 18px;
 }
