--- a/src/components/DeleteProduct.css
+++ b/src/components/DeleteProduct.css
@@ -28,3 +28,59 @@
 #delete-tooltip .MuiTooltip-tooltip {
     font-size: 18px;
 }
+
+.delete-check-container {
+    float: right;
+    font-family: Arial;
+    font-weight: bold;
+    color: var(--color-3);
+}
+
+.yes-no-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.yes-button {
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+    margin-right: 20px;
+}
+
+.yes-button:hover {
+    background-color:transparent;
+    border: none;
+    transform: scale(1.3);
+}
+
+.no-button {
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+}
+
+.no-button:hover {
+    background-color: transparent;
+    border: none;
+    transform: scale(1.3);
+}
+
+#x-icon {
+    font-size: 40px;
+    color: var(--color-1);
+}
+
+#x-icon:hover {
+    color: var(--color-2);
+}
+
+#check-icon {
+    font-size: 40px;
+    color: var(--color-3);
+}
+
+#check-icon:hover {
+    color: #f74799;
+}
