--- a/src/components/ProductDetail.css
+++ b/src/components/ProductDetail.css
@@ -185,3 +185,37 @@
     background-color: var(--color-1);
     color: #ebe7ef;
   }
+
+  /* Carousel arrows */
+.slick-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100; 
+  width: 70px; 
+  height: 70px; 
+  background-color: rgb(122, 120, 120, 0.2);
+  border: none; 
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.prev {
+  left: 0;
+  margin-left: 15%;
+}
+
+.next {
+  right: 0;
+  margin-right: 15%;
+}
+
+/* Arrows icons */
+.slick-arrow svg {
+  color: var(--color-2);
+  font-size: 30px;
+}
