--- a/src/components/PostReview.css
+++ b/src/components/PostReview.css
@@ -108,3 +108,10 @@
 #review-tooltip .MuiTooltip-tooltip {
     font-size: 18px;
   }
+
+.error-message-review {
+    font-family: Arial;
+    color: var(--color-3);
+    text-align: center;
+    font-size: 20px;
+}
