--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -163,3 +163,30 @@ color: black;
   display: flex;
   flex-direction: row;
 }
+
+
+.delete_post {
+  background-color: transparent;
+  float: right;
+  font-family: "Logo", sans-serif;
+  margin-left: auto;
+  border-radius: 100%;
+  width: 70px;
+  height: 65px;
+}
+
+.delete_post:hover {
+  background-color: transparent;
+  border: none;
+  transform: scale(1.3);
+}
+
+#trash-post-icon {
+  color: var(--color-1);
+  font-size: 30px;
+}
+
+#trash-post-icon:hover {
+  color: var(--color-2);
+  font-size: 30px;
+}
