--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -182,6 +182,37 @@ body {
   color: var(--color-1);
 }
 
+
+#trash-icon {
+  color: var(--color-1);
+}
+
+.delete_post_timeline {
+  background-color: transparent;
+  float: right;
+  font-family: "Logo", sans-serif;
+  margin-left: auto;
+  border-radius: 100%;
+  width: 70px;
+  height: 65px;
+}
+
+.delete_post_timeline:hover {
+  background-color: transparent;
+  border: none;
+  transform: scale(1.3);
+}
+
+#trash-timeline-icon {
+  color: var(--color-1);
+  font-size: 30px;
+}
+
+#trash-timeline-icon:hover {
+  color: var(--color-2);
+  font-size: 30px;
+}
+
 .post_comments {
   margin-top: 10px;
   color: var(--color-2);
@@ -257,13 +288,27 @@ color: black;
 }
 
 .groups-text {
-  font-family: 'Slogan';
+  font-family: 'Logo';
   font-size: 30px;
+}
+
+.group-name {
+  font-family: 'Slogan';
+}
+
+.group-description {
+  font-family: 'Logo';
 }
 
 .group-post {
   padding: 10px;
   margin-bottom: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.group-posts{
+  margin-top: 30px;
+  font-family: 'Slogan';
 }
 
 .group-post:last-child {
@@ -274,6 +319,13 @@ color: black;
   display: flex;
   justify-content: center;
   margin-top: 20px;
+}
+
+.group-members {
+  font-size: 20px;
+  background: transparent;
+  color:var(--color-1);
+  border: none;
 }
 
 /* Extra styling for friend list */
@@ -349,6 +401,12 @@ color: black;
 
 .email-modal button:hover {
   background-color: var(--color-2);
+}
+
+.name-photos-container {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
 }
 
 
