--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -304,6 +304,9 @@ color: black;
   padding: 10px;
   margin-bottom: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  border: 1px dotted gray;
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 .group-posts{
