--- a/src/components/ProductDetail.css
+++ b/src/components/ProductDetail.css
@@ -220,3 +220,40 @@
   color: var(--color-2);
   font-size: 30px;
 }
+
+.add-cart-button {
+  background-color: var(--color-1);
+  margin: 10px;
+  font-family: "Logo", sans-serif;
+  color: #fafafa;
+  float: right;
+  border-radius: 100%;
+  width: 70px;
+  height: 65px;
+}
+
+.add-cart-button:hover {
+  background-color: var(--color-2);
+  border: none;
+  transform: scale(1.3);
+}
+
+#add-cart-icon {
+  color: white;
+  font-size: 30px;
+}
+
+#add-cart-icon:hover {
+  color: white;
+  font-size: 30px;
+}
+
+#add-cart-tooltip .MuiTooltip-tooltip {
+  font-size: 18px;
+}
+
+.title-trash-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
