--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -20,7 +20,7 @@
     width: 80%;
     border-radius: 10px;
     height: 2.5rem;
-    padding: 0 15px;
+    padding: 0px;
     box-shadow: 0px 0px 8px #ddd;
     display: flex;
     align-items: baseline;
@@ -43,7 +43,7 @@ input:focus{
 
 #search-icon{
     color: var(--color-2);
-    margin-left: 2%;
+    margin-left: 1.5%;
 }
 
 #new-product {
@@ -68,3 +68,34 @@ input:focus{
 .tooltip{
     font-size: 10rem;
  }
+
+ .kart-button {
+    background-color: var(--color-1);
+    margin: 10px;
+    font-family: "Logo", sans-serif;
+    color: #fafafa;
+    float: right;
+    border-radius: 100%;
+    width: 70px;
+    height: 65px;
+}
+
+.kart-button:hover {
+    background-color: var(--color-2);
+    border: none;
+    transform: scale(1.3);
+}
+
+#kart-icon {
+    color: white;
+    font-size: 30px;
+  }
+
+#kart-icon:hover {
+    color: white;
+    font-size: 30px;
+  }
+
+#kart-tooltip .MuiTooltip-tooltip {
+    font-size: 18px;
+  }
