--- a/src/components/EditReview.css
+++ b/src/components/EditReview.css
@@ -115,3 +115,40 @@
     text-align: center;
     font-size: 20px;
 }
+
+.delete-review-button {
+    background-color: var(--color-1);
+    margin: 10px;
+    font-family: "Logo", sans-serif;
+    color: #fafafa;
+    float: right;
+    border-radius: 100%;
+    width: 70px;
+    height: 65px;
+}
+
+.delete-review-button:hover {
+    background-color: var(--color-2);
+    border: none;
+    transform: scale(1.3);
+}
+
+#delete-review-icon {
+    color: white;
+    font-size: 30px;
+}
+
+#delete-review-icon:hover {
+    color: white;
+    font-size: 30px;
+}
+
+#delete-review-tooltip .MuiTooltip-tooltip {
+    font-size: 18px;
+}
+
+.delete-edit-buttons-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
