--- a/src/components/Marketplace.css
+++ b/src/components/Marketplace.css
@@ -65,12 +65,12 @@
   justify-content: center;
   align-items: center;
   height: 200px;
-  overflow: hidden; /* Evitar que las imágenes sobrepasen el contenedor */
+  overflow: hidden; 
 }
 
 .product_image {
   max-width: 95%;
-  object-fit: contain; /* Ajusta la imagen manteniendo su relación de aspecto */
+  object-fit: contain; 
   border-radius: 5%;
   max-block-size: -webkit-fill-available;
   
