--- a/src/components/Order.css
+++ b/src/components/Order.css
@@ -150,26 +150,42 @@
     flex-direction: column;
 }
 
-.product-name {
+.orderline-label {
+    font-size: 28px;
+    line-height: 1.6;
+    color: var(--color-2);
+    font-weight: bold;
+    font-family: 'Logo';
+    text-transform: capitalize;
+    padding: 10px;
+}
+
+.orderline-text {
+    font-size: 25px;
+    line-height: 1.6;
+    color: black;
+    font-weight: bold;
+    font-family: 'Arial';
+    text-transform: capitalize;
+    margin-bottom: 0%;
+}
+
+.subtotal-label {
     font-size: 28px;
     line-height: 1.6;
     color: var(--color-1);
     font-weight: bold;
     font-family: 'Logo';
     text-transform: capitalize;
-    margin-bottom: 0%;
+    padding: 10px;
 }
 
-.product-price {
-    font-size: 25px;
+.subtotal-text {
+    font-size: 30px;
     line-height: 1.6;
-    color: #1c1e21;
+    color: black;
+    font-weight: bold;
     font-family: 'Logo';
-}
-
-.product-rating {
-    font-size: 18px;
-    line-height: 1.6;
-    color: var(--color-2);
-    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 0%;
 }
