--- a/src/components/Order.css
+++ b/src/components/Order.css
@@ -145,9 +145,20 @@
     max-block-size: -webkit-fill-available;
 }
 
-.orderline-text-container {
+.orderline-info {
     display: flex;
     flex-direction: column;
+}
+
+.orderline-text-container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin-top: 10px;
+}
+
+.orderline-labels {
+    flex: 0 0 210px;
 }
 
 .orderline-label {
@@ -157,17 +168,24 @@
     font-weight: bold;
     font-family: 'Logo';
     text-transform: capitalize;
-    padding: 10px;
 }
 
 .orderline-text {
     font-size: 25px;
     line-height: 1.6;
-    color: black;
+    color: rgb(114, 114, 114);
     font-weight: bold;
     font-family: 'Arial';
     text-transform: capitalize;
-    margin-bottom: 0%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    gap: 5px;
+}
+
+.subtotal-container {
+    display: flex;
 }
 
 .subtotal-label {
@@ -178,14 +196,14 @@
     font-family: 'Logo';
     text-transform: capitalize;
     padding: 10px;
+    margin-top: 10px;
 }
 
 .subtotal-text {
-    font-size: 30px;
+    font-size: 35px;
     line-height: 1.6;
     color: black;
     font-weight: bold;
     font-family: 'Logo';
     text-transform: capitalize;
-    margin-bottom: 0%;
 }
